--- a/HTML - Personal Site/CSS/styles.css
+++ b/HTML - Personal Site/CSS/styles.css
@@ -1,3 +1,7 @@
+/*
+    https://colorhunt.co/palette/f9f7f7dbe2ef3f72af112d4e
+*/
+
 body {
     background-color: #F9F7F7;
   }
@@ -14,3 +18,18 @@ hr {
 img {
     height: 120px;
   }
+
+h1 {
+    font: 2em "Roboto";
+    color: #112D4E;
+}
+
+h3 {
+    font: 1.2em "Roboto";
+    color: #3F72AF;
+}
+
+p {
+    font: 0.8em "Roboto";
+    color: #112D4E;
+}
