--- a/CSS - My Site/css/styles.css
+++ b/CSS - My Site/css/styles.css
@@ -6,42 +6,63 @@ body {
     margin: 0;
     text-align: center;
     font-family: 'Roboto', sans-serif;
+    color: #40514e;
 }
 
 h1 {
-    margin: 0 auto 20px auto;
+    margin: 0px auto 0px auto;
     font-family: 'Sacramento', cursive;
     font-size: 5rem;
+    color: #243D25;
+    line-height: 2;
 }
 
 h2 {
     margin: 0 auto 0 auto;
     font-family: 'Montserrat', sans-serif;
     font-size: 2.5rem;
+    color: #4B8673;
+    font-weight: normal;
+    padding-top: 20px;
+    padding-bottom: 10px;
+
 }
 
 h3 {
     margin: 0 auto 0 auto;
     font-family: 'Montserrat', sans-serif;
     font-size: 1.5rem;
+    color: #4B8673;
+}
+
+hr {
+    width: 5%;
+    border: dotted #EFEAD8 6px;
+    border-bottom: none;
+    margin: 100px auto 80px auto;
 }
 
 img {
     width: 100%;
 }
 
-.top_container {
+p {
+    line-height: 1.5;
+}
+
+.top-container {
     background-color: #F6FBF4;
     padding-top: 10%;
     position: relative;
 }
 
-.mid_container {
-
+.mid-container {
+    background-color: #F6FBF4;
+    padding: 100px 0px;
 }
 
-.down_container {
-
+.down-container {
+    background-color: #4E944F;
 }
 
 .top_cloud {
@@ -59,16 +80,72 @@ img {
 }
 
 .hill {
-    margin: 40px 0 40px 0 ;
+    margin: 40px 0 0 0;
     position: relative;
     bottom: 100%;
 }
 
-.skills-img {
-    width: 8%;
+.python-img {
+    width: 25%;
+    float: left;
+    margin-right: 30px;
+}
+
+.blender-img {
+    width: 25%;
+    float: right;
+    margin-left: 30px;
+}
+
+.plc-img {
+    width: 25%;
+    float: left;
+    margin-right: 30px;
 }
 
 .my-img {
-    width: 10%;
+    width: 15%;
     border-radius: 50%;
 }
+
+.skill-row {
+    width: 50%;
+    margin: 100px auto;
+    text-align: left;
+}
+
+.intro {
+    width: 40%;
+    margin: auto;
+}
+
+.contact-me {
+    
+}
+
+.btn {
+    background: #83BD75;
+    background-image: -webkit-linear-gradient(top, #83BD75, #446A46);
+    background-image: -moz-linear-gradient(top, #83BD75, #446A46);
+    background-image: -ms-linear-gradient(top, #83BD75, #446A46);
+    background-image: -o-linear-gradient(top, #83BD75, #446A46);
+    background-image: linear-gradient(to bottom, #83BD75, #446A46);
+    -webkit-border-radius: 8;
+    -moz-border-radius: 8;
+    border-radius: 15px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 25px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+  }
+
+  .btn:hover {
+    background: #B4E197;
+    background-image: -webkit-linear-gradient(top, #B4E197, #83BD75);
+    background-image: -moz-linear-gradient(top, #B4E197, #83BD75);
+    background-image: -ms-linear-gradient(top, #B4E197, #83BD75);
+    background-image: -o-linear-gradient(top, #B4E197, #83BD75);
+    background-image: linear-gradient(to bottom, #B4E197, #83BD75);
+    text-decoration: none;
+  }
