--- a/4. STARTUP site/css/styles.css
+++ b/4. STARTUP site/css/styles.css
@@ -3,8 +3,16 @@
     background-color: rgb(255, 255, 255);
 }
 
+.container-fluid {
+    padding: 3% 15%;
+}
+
+.tabele {
+    padding-top: 5%;
+}
+
 h1 {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat';
     font-size: 3rem;
     line-height: 1.5;
 }
