--- a/4. STARTUP site/css/styles.css
+++ b/4. STARTUP site/css/styles.css
@@ -1,6 +1,10 @@
-
 #title {
     background-color: rgb(255, 255, 255);
+}
+
+body {
+    font-family: 'Montserrat';
+    font-weight: bold;
 }
 
 .container-fluid {
@@ -11,8 +15,41 @@
     padding-top: 5%;
 }
 
+/* do poprawy */
+.features {
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
+.master-img-div {
+    position: relative;
+    height: 500px;
+}
+
+.master-img {
+    max-height: 100%;
+    max-width: 100%;
+    width: auto;
+    height: auto;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+.buttons-my {
+    margin: 4% 2% 2% 0%;
+}
+
 h1 {
     font-family: 'Montserrat';
     font-size: 3rem;
     line-height: 1.5;
+}
+
+hr {
+    margin-bottom: 20px;
+    margin-top: 50px;
 }
